--- a/src/styles/Calculator.css
+++ b/src/styles/Calculator.css
@@ -5,9 +5,10 @@
   border: 1px solid #ccc;
   border-radius: 10px;
   text-align: center;
-  background-image: url('../assets/background.jpg');
+  /* background-image: url('../assets/background.jpg');
   background-size: cover;
-  background-position: center;
+  background-position: center; */
+  background-color: rgba(255, 255, 255, 0.8);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
