--- a/src/styles/CalculatorSelection.css
+++ b/src/styles/CalculatorSelection.css
@@ -4,9 +4,10 @@
     max-width: 600px;
     margin: 0 auto;
     padding: 20px;
-    background-image: url('../assets/background.jpg');
+    /* background-image: url('../assets/background.jpg');
     background-position: center;
-    background-size: cover;
+    background-size: cover; */
+    background-color: rgba(255, 248, 220, 0.9);
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
