--- a/src/styles/ForgotPasswordPage.css
+++ b/src/styles/ForgotPasswordPage.css
@@ -9,9 +9,10 @@ body {
 }
 
 .forgot-password-container {
-  background-image: url('../assets/background.jpg'); /* Update this path as necessary */
-  background-size: cover; /* Make the image cover the entire background */
+  /*background-image: url('../assets/background.jpg'); /* Update this path as necessary 
+  background-size: cover; /* Make the image cover the entire background 
   background-position: center; /* Center the image */
+  background-color: rgba(255, 248, 220, 0.9);
   max-width: 400px;
   margin: 100px auto;
   padding: 30px;
