--- a/src/styles/UserProfile.css
+++ b/src/styles/UserProfile.css
@@ -9,9 +9,10 @@ body {
 }
 
 .user-profile-container {
-  background-image: url('../assets/background.jpg'); /* Update this path as necessary */
-  background-size: cover; /* Make the image cover the entire background */
-  background-position: center; /* Center the image */
+  /* background-image: url('../assets/background.jpg'); /* Update this path as necessary 
+  background-size: cover; /* Make the image cover the entire background 
+  background-position: center; Center the image */
+  background-color: rgba(255, 248, 220, 0.9);
   max-width: 1000px; /* Increase the width for a larger form */
   margin: 100px auto;
   padding: 30px;
