--- a/koi-care-front-end/src/styles/BlogDetails.css
+++ b/koi-care-front-end/src/styles/BlogDetails.css
@@ -1,25 +1,47 @@
-/* BlogDetails.css */
+.blog-details-container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+}
 
-.blog-details {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #f9f9f9;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .blog-details h2 {
-    margin-bottom: 20px;
-    font-size: 2rem;
-  }
-  
-  .blog-details p {
-    font-size: 1rem;
-    line-height: 1.6;
-  }
-  
-  .blog-author {
-    margin-top: 20px;
-    font-weight: bold;
-  }
+.blog-details-title {
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 2.5em;
+  color: #333;
+}
+
+.blog-details-image {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+  margin-bottom: 20px;
+}
+
+.blog-details-content {
+  font-size: 1.2em;
+  color: #666;
+  line-height: 1.6;
+  margin-bottom: 20px;
+}
+
+.author-info {
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.author-image {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.author-name {
+  font-size: 1em;
+  color: #333;
+}
