--- a/koi-care-front-end/src/styles/ProductDetails.css
+++ b/koi-care-front-end/src/styles/ProductDetails.css
@@ -12,7 +12,7 @@
 }
 
 .modal-content {
-  background-color: #fff;
+  background-color: black;
   padding: 20px;
   border-radius: 10px;
   width: 80%;
